Add user endpoints
