# src/main/java/com/restaurant/app/category/repository/entity/UserPassword.java
@@ -1,0 +1,6 @@
+package com.restaurant.app.category.repository.entity;
+
+public record UserPassword(
+        String password
+) {
+}
