# src/main/java/com/restaurant/app/user/controller/dto/ChangePasswordRequest.java
@@ -1,0 +1,7 @@
+package com.restaurant.app.user.controller.dto;
+
+public record ChangePasswordRequest(
+        String currentPassword,
+        String newPassword
+) {
+}
