# src/main/java/com/restaurant/app/user/controller/dto/UserRequest.java
@@ -1,0 +1,10 @@
+package com.restaurant.app.user.controller.dto;
+
+public record UserRequest(
+        String email,
+        String name,
+        String password,
+        String address,
+        String phoneNumber
+) {
+}
