# src/main/java/com/restaurant/app/user/controller/dto/UserResponse.java
@@ -1,0 +1,16 @@
+package com.restaurant.app.user.controller.dto;
+
+import java.time.LocalDateTime;
+
+public record UserResponse(
+        Long userId,
+        String email,
+        String name,
+        LocalDateTime createdTime,
+        String role,
+        String address,
+        String phoneNumber,
+        Long money,
+        Boolean loyaltyCard
+) {
+}
