# src/main/java/com/restaurant/app/user/repository/UserEntity.java
@@ -1,0 +1,115 @@
+package com.restaurant.app.user.repository;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.Id;
+
+import java.time.LocalDateTime;
+
+import static jakarta.persistence.GenerationType.IDENTITY;
+
+@Entity
+public class UserEntity {
+
+    @Id
+    @GeneratedValue(strategy = IDENTITY)
+    private Long userId;
+
+    private String email;
+
+    private String name;
+
+    private String password;
+
+    private LocalDateTime createdTime;
+
+    private String role;
+
+    private String address;
+
+    private String phoneNumber;
+
+    private Long money;
+
+    private Boolean loyaltyCard;
+
+    public Long getUserId() {
+        return userId;
+    }
+
+    public void setUserId(Long userId) {
+        this.userId = userId;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+
+    public LocalDateTime getCreatedTime() {
+        return createdTime;
+    }
+
+    public void setCreatedTime(LocalDateTime createdTime) {
+        this.createdTime = createdTime;
+    }
+
+    public String getRole() {
+        return role;
+    }
+
+    public void setRole(String role) {
+        this.role = role;
+    }
+
+    public String getAddress() {
+        return address;
+    }
+
+    public void setAddress(String address) {
+        this.address = address;
+    }
+
+    public String getPhoneNumber() {
+        return phoneNumber;
+    }
+
+    public void setPhoneNumber(String phoneNumber) {
+        this.phoneNumber = phoneNumber;
+    }
+
+    public Long getMoney() {
+        return money;
+    }
+
+    public void setMoney(Long money) {
+        this.money = money;
+    }
+
+    public Boolean getLoyaltyCard() {
+        return loyaltyCard;
+    }
+
+    public void setLoyaltyCard(Boolean loyaltyCard) {
+        this.loyaltyCard = loyaltyCard;
+    }
+}
