# src/main/java/com/restaurant/app/user/service/dto/UserInfoDetails.java
@@ -1,0 +1,63 @@
+package com.restaurant.app.user.service.dto;
+
+import com.restaurant.app.user.repository.UserEntity;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
+
+public class UserInfoDetails implements UserDetails {
+
+    private final String email;
+
+    private final String password;
+
+    private final List<GrantedAuthority> authorities;
+
+    public UserInfoDetails(UserEntity userEntity) {
+        this.email = userEntity.getEmail();
+        this.password = userEntity.getPassword();
+        this.authorities = Arrays.stream(userEntity.getRole().split(","))
+                .map(SimpleGrantedAuthority::new)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return authorities;
+    }
+
+    @Override
+    public String getPassword() {
+        return password;
+    }
+
+    @Override
+    public String getUsername() {
+        return email;
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
+}
